@@ -1,5 +1,10 @@
 2008-06-24  Tim-Philipp Müller  <tim.muller at collabora co uk>
 
+	* src/htdocs/bugs/bugs.xml:
+	  More milestones.
+
+2008-06-24  Tim-Philipp Müller  <tim.muller at collabora co uk>
+
 	* src/htdocs/bindings/bindings.xml:
 	  Update c++ bindings blurb.
 
